--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,143 +1,140 @@
-body {
-    font-family: "Adobe Arabic", Arial, sans-serif;
-  }  
-
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(21, 21, 21);
-    padding: 8px 30px;
-  }
-  
-  .navbar-logo img {
-    padding-top: 15%;
-    height: 35px;
-  }
-  
-  .navbar-menu {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #181818;
+  padding: 0.8em 2em;
+}
 
-  .navbar-menu {
-    cursor: pointer;
-    position: relative;
-  }
-  
-  .menu-open .navbar-logo {
-    transform: rotate(180deg) translate(-180px, 0);
-    position: relative;
-    z-index: 2;
+.navbar-logo{
+  transition: transform 0.3s ease-out;
+  opacity: 1;
+  transition: all 0.3s ease-out;
+  cursor: pointer;
+}
+
+.navbar-logo:hover{
+  opacity: 1;
+}
+
+.navbar-logo img {
+  width: 1.5em;
+}
+
+.navbar-menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+.menu-open .navbar-logo {
+  transform: rotateY(180deg);
+  position: relative;
+  z-index: 2;
 }
   
-  .menu-open .navbar-logo::before {
-    transform: rotate(-180deg) translate(-180px, 0);
-    position: relative;
-    z-index: 2;
+.menu-open .navbar-logo::before {
+  transform: rotateY(-180deg);
+  position: relative;
+  z-index: 2;
 }
   
-  .menu-open .navbar-logo::after {
-    transform: rotate(-180deg) translate(-180px, 0);
-    position: relative;
-    z-index: 2;
-  }
-  
-  .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 10px;
-    padding-top: 10%;
-    color: white;
-    z-index: 1;
-    border-radius: 15px;
-  }
-  
-  .navbar-item {
-    margin: 0px 15px;
-    font-size: medium;
-    font-weight: 50;
-  }
-  
-  .navbar-item a {
-    color: seashell;
-    text-decoration: none;
-    position: relative;
-  }
-  
-  .navbar-item a::after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    width: 0;
-    height: 0.1px;
-    margin-top: 0.5%;
-    background-color: rgba(255, 245, 238, 0.3);
-    transition: width 0.3s ease-out;
-    transform: translateX(-50%);
-  }
-  
-  .navbar-item a:hover::after {
-    width: 95%;
-  }
+.menu-open .navbar-logo::after {
+  transform: rotateY(-180deg);
+  position: relative;
+  z-index: 2;
+}
 
-  .panel {
-    position: absolute;
-    top: 100%;
-    left: -15%;
-    width: 200px;
-    margin-top: 21px;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    border-radius: 15px;
-    display: none;
-  }
-  
-  .navbar-item.active .panel {
-    display: block;
-  }
-  
-  .image-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .image-container img {
-    max-width: 100%;
-    height: auto;
-  }
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 10em;
+  height: 100vh;
+  background-color: #181818;
+  padding-top: 4em;
+  color: #f3f3f3;
+  z-index: 1;
+  box-shadow: 0px -10px 7px 2px #00000080;
+  -webkit-box-shadow: 0px -10px 7px 2px #00000080;
+  -moz-box-shadow: 0px -10px 7px 2px #00000080;
+}
 
-  .trainagan {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-  }
+.sidebar a{
+  display: block;
+  font-size: 0.9em !important;
+  font-weight: 400 !important;
+  padding: 2em  1em !important;
+  transition: background-color 0.5s ease-out;
+  cursor: pointer !important;
+}
 
-  .traingif {
-    position: relative;
-    width: 100%;
-    object-fit: cover;
-    z-index: -2;
-    transform: scaleY(1.31);
-  }
+.sidebar a:hover{
+  background-color: #333333;
+}
 
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 54%;
-    background-color: rgba(0, 0, 0, 0.3);
-    opacity: 1; /* Adjust the opacity as desired */
-    z-index: -1;
-  }
-  
+.navbar a {
+  font-size: 1.1em;
+  color: #f3f3f3;
+  padding: 0.5em 1.5em;
+  text-decoration: none;
+  cursor: default;
+  transition: font-weight 0.3s ease-out;
+}
+
+.navbar a:hover{
+  font-weight: 700;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 1.1em;
+  color: #f3f3f3;
+  padding: 0.5em 1.5em;
+  background-color: inherit;
+  font-family: inherit; 
+  margin: 0;
+  font-weight: 400;
+  transition: font-weight 0.3s ease-out;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  font-weight: 700;
+}
+
+.dropdown-content {
+  position: absolute;
+  background-color: #181818;
+  display: none;
+  z-index: 2;
+  box-shadow: 0px 4px 13px 0px #00000080;
+  -webkit-box-shadow: 0px 4px 13px 0px #00000080;
+  -moz-box-shadow: 0px 4px 13px 0px #00000080;
+}
+
+.dropdown-content a {
+  float: none;
+  color: #f3f3f3;
+  padding: 1em;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-weight: 400;
+  font-size: 0.8em;
+  transition: background-color 0.2s ease-out;
+  cursor: pointer;
+}
+
+.dropdown-content a:hover {
+  background-color: #333333;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
