--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 .App {
   text-align: center;
-  font-family: 'Space Mono', monospace !important;
-  letter-spacing: 0.05em;
+  font-family: "Adobe Arabic", Arial, sans-serif !important;
   overflow-x: hidden;
 }
 
