--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -64,28 +64,26 @@
 
 .sidebar a{
   display: block;
-  font-size: 0.9em !important;
+  font-size: 1.5em !important;
   font-weight: 400 !important;
-  padding: 2em  1em !important;
-  transition: background-color 0.5s ease-out;
+  padding: 1em !important;
+  transition: all 0.5s ease-out;
   cursor: pointer !important;
 }
 
 .sidebar a:hover{
   background-color: #333333;
+  font-weight: 700 !important;
 }
 
 .navbar a {
-  font-size: 1.1em;
+  font-size: 1.5em;
   color: #f3f3f3;
   padding: 0.5em 1.5em;
   text-decoration: none;
   cursor: default;
-  transition: font-weight 0.3s ease-out;
-}
-
-.navbar a:hover{
   font-weight: 700;
+  transition: font-weight 0.3s ease-out;
 }
 
 .dropdown {
@@ -94,18 +92,14 @@
 }
 
 .dropdown .dropbtn {
-  font-size: 1.1em;
+  font-size: 1.5em;
   color: #f3f3f3;
   padding: 0.5em 1.5em;
   background-color: inherit;
   font-family: inherit; 
   margin: 0;
-  font-weight: 400;
-  transition: font-weight 0.3s ease-out;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
   font-weight: 700;
+  transition: font-weight 0.3s ease-out;
 }
 
 .dropdown-content {
@@ -121,13 +115,13 @@
 .dropdown-content a {
   float: none;
   color: #f3f3f3;
-  padding: 1em;
+  padding: 0.9em 1.5em;
   text-decoration: none;
   display: block;
   text-align: left;
   font-weight: 400;
-  font-size: 0.8em;
-  transition: background-color 0.2s ease-out;
+  font-size: 1.2em;
+  transition: background-color 0.3s ease-out;
   cursor: pointer;
 }
 
