--- a/src/CardCarousel.css
+++ b/src/CardCarousel.css
@@ -1,12 +1,12 @@
 * {
     box-sizing: border-box;
+    z-index: 2;
 }
 
 .container {
-    background: #0e0e0e;
+    background: #181818;
     padding: 10%;
     position: relative;
-    z-index: -3;
 }
 
 .card-carousel {
@@ -20,12 +20,12 @@
 }
 
 .card {
-    color: seashell;
-    background: #191919;
+    color: #f3f3f3;
+    background: #1b1b1b;
     border-radius: 15px;
-    border: 0.5px solid rgba(53, 53, 53, 0.3);
+    border: 0.5px solid #79797944;
     padding: 30px;
-    box-shadow: 5px 5px 25px rgba(127, 127, 127, 0.1);
+    box-shadow: 5px 5px 25px #b6b6b650;
     width: 75%;
     height: 120%;
     transition: all 1s ease-out;
@@ -33,6 +33,7 @@
     position: absolute;
     transform: scale(0.85) translateY(50px);
     left: 12.5%;
+    cursor: pointer;
 }
 
 .card h2,
@@ -47,7 +48,7 @@
 .card.active {
     opacity: 1;
     transform: scale(1) translateY(0);
-    box-shadow: 0 30px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 30px 20px #00000057;
     z-index: 1;
 }
 
