--- a/src/CardCarouselSecond.css
+++ b/src/CardCarouselSecond.css
@@ -3,10 +3,9 @@
 }
 
 .containerS {
-    background: rgb(245, 245, 245);
+    background: #f5f5f5;
     padding: 10%;
     position: relative;
-    z-index: -3;
 }
 
 .card-carouselS {
@@ -21,11 +20,11 @@
 
 .cardS {
     color: #191919;
-    background: rgb(255, 255, 255);
+    background: #ffffff;
     border-radius: 15px;
-    border: 0.5px solid rgba(239, 239, 239, 0.2);
+    border: 0.5px solid #efefef33;
     padding: 30px;
-    box-shadow: 5px 5px 25px rgba(127, 127, 127, 0.1);
+    box-shadow: 5px 5px 25px #7f7f7f1a;
     width: 75%;
     height: 120%;
     transition: all 1s ease-out;
@@ -33,6 +32,7 @@
     position: absolute;
     transform: scale(0.85) translateY(50px);
     left: 12.5%;
+    cursor: pointer;
 }
 
 .cardS h2,
@@ -47,7 +47,7 @@
 .cardS.active {
     opacity: 1;
     transform: scale(1) translateY(0);
-    box-shadow: 0 30px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 30px 20px #00000033;
     z-index: 1;
 }
 
