--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,10 +1,11 @@
 .image-container {
     width: 100%;
+    background-color: #181818;
 }
 
 .traingif {
     position: relative;
     width: 100%;
     object-fit: cover;
-    z-index: -2;
+    background-image: url('./assets/traingan.gif');
 }
