--- a/src/CardCarouselSecond.css
+++ b/src/CardCarouselSecond.css
@@ -27,12 +27,13 @@
     box-shadow: 5px 5px 25px #7f7f7f1a;
     width: 75%;
     height: 120%;
-    transition: all 1s ease-out;
+    transition: all 0.7s ease-out;
     opacity: 0;
     position: absolute;
     transform: scale(0.85) translateY(50px);
     left: 12.5%;
     cursor: pointer;
+    z-index: -1;
 }
 
 .cardS h2,
@@ -44,6 +45,13 @@
     visibility: hidden;
 }
 
+.cardS.prev {
+    transform: scale(1.1) translateY(-50px);
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+}
+
 .cardS.active {
     opacity: 1;
     transform: scale(1) translateY(0);
@@ -52,14 +60,7 @@
 }
 
 .cardS.next {
+    transition-delay: 0.2s;
     opacity: 1;
-    z-index: 0;
     height: 125%;
-}
-
-.cardS.prev {
-    transform: scale(1.1) translateY(-50px);
-    z-index: 2;
-    opacity: 0;
-    visibility: hidden;
 }
