--- a/src/Hero.css
+++ b/src/Hero.css
@@ -7,5 +7,6 @@
     position: relative;
     width: 100%;
     object-fit: cover;
+    z-index: 0;
     background-image: url('./assets/traingan.gif');
 }
