--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -69,14 +69,6 @@
   padding: 1em !important;
   transition: all 0.5s ease-out;
   cursor: pointer !important;
-}
-
-.sidebar a:hover{
-  background-color: #333333;
-  font-weight: 700 !important;
-}
-
-.navbar a {
   font-size: 1.5em;
   color: #f3f3f3;
   padding: 0.5em 1.5em;
@@ -84,6 +76,11 @@
   cursor: default;
   font-weight: 700;
   transition: font-weight 0.3s ease-out;
+}
+
+.sidebar a:hover{
+  background-color: #333333;
+  font-weight: 700 !important;
 }
 
 .dropdown {
@@ -107,9 +104,9 @@
   background-color: #181818;
   display: none;
   z-index: 2;
-  box-shadow: 0px 4px 13px 0px #00000080;
-  -webkit-box-shadow: 0px 4px 13px 0px #00000080;
-  -moz-box-shadow: 0px 4px 13px 0px #00000080;
+  box-shadow: 0px -2px 17px 3px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0px -2px 17px 3px rgba(0,0,0,0.6);
+  -moz-box-shadow: 0px -2px 17px 3px rgba(0,0,0,0.6);
 }
 
 .dropdown-content a {
@@ -129,6 +126,60 @@
   background-color: #333333;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content,
+.dropdown:hover .github-card {
   display: block;
+}
+
+.github-card{
+  padding: 1em;
+  position: absolute;
+  display: none;
+  background-color: #181818;
+  left: -0.1em;
+  width: 100%;
+  box-shadow: 0px -2px 17px 3px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0px -2px 17px 3px rgba(0,0,0,0.6);
+  -moz-box-shadow: 0px -2px 17px 3px rgba(0,0,0,0.6);
+  border: 0.1em solid #707070;
+  border-radius: 1em;
+}
+
+.github-card .header{
+  display: flex;
+  align-items: center;
+  margin: 1em;
+}
+
+.github-card a{
+  color: #e8e8e8;
+  font-weight: 700;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+.github-card a:hover{
+  text-decoration: underline;
+  color: #ffffff;
+}
+
+.github-card .description{
+  font-size: 1.1em;
+  font-weight: 400;
+  text-align: justify;
+  color: #707070;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2; 
+  -webkit-box-orient: vertical;
+}
+
+.github-card .pill{
+  margin-left: 2em;
+  color: #707070;
+  font-size: 1.1em;
+  padding: 0.02em 0.3em;
+  border: 0.05em solid #707070;
+  border-radius: 50em;
 }
