--- a/src/Gen.css
+++ b/src/Gen.css
@@ -1,50 +1,120 @@
-body {
+.Gen {
     font-family: "Adobe Arabic", Arial, sans-serif;
-    background-color: rgb(0, 0, 0);
-}  
+    background-color: #fafafa !important;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23a3a3a3' fill-opacity='0.05'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    justify-content: center; 
+    align-items: center;
+    height: 100vh;
+    padding: 2% 7.5%;
+}
 
-label {
-    color: seashell;
-    display: flex;
+.Gen h1 {
+    color: #111 !important;
+}
+
+.gen-container {
+    display: grid;
+    grid-template-columns: repeat(2, 45%);
+    grid-column-gap: 10%;
+    padding-top: 10%;
+}
+
+.Gen h3 {
+    color: #111;
+    font-size: larger;
+}
+
+.gen-info {
+    display: grid;
+    grid-template-columns: repeat(2, 45%);
+    grid-column-gap: 7.5%;
+    padding-left: 2.5%;
+}
+
+.Gen input {
+    background-color: #dbdbdba1 !important;
+    color: rgba(0, 0, 0, 0.75) !important;
+    height: 50% !important;
+    width: 50% !important;
+    transform: translate(50%, 50%) !important;
+}
+
+.Gen button {
+    font-size: larger;
 }
 
 button {
-    border: none;
-    border-radius: 5px;
-    color: rgba(0, 0, 0, 0.75);
-    font-weight: 525;
-    background-color: rgb(245, 245, 245) ;
+    cursor: pointer;
 }
 
-input {
-    border: none;
-    border-radius: 2.5px;
-    color: rgba(0, 0, 0, 0.75);
-    text-align: center;
-    font-size: 12.5px;
-    width: 50%;
-    height: 25%;
-    transform: translate(25%, 140%);
-}
-
-.Gen {
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    width: 100vw; 
-    height: 100vh;
-}
-
-label {
+.files {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(2, 50%);
+    padding-bottom: 10%;
 }
 
-
-input, p {
-    padding: 0% 5%;
+#sample-container {
+    display: grid;
+    grid-template-columns: repeat(3, 30%);
+    grid-column-gap: 5%;
 }
 
-#input, #samples {
-    padding: 0% 5%;
+#gen-samples {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#upload-json, #upload-weights{
+    padding: 2.5px;
+    border: 1px solid #ccc;
+    border-radius: 0.12em !important;
+    color: #dcdcdc;
+    font-size: small !important;
+    height: 20px !important;
+}
+
+#upload-json::file-selector-button, #upload-weights::file-selector-button {
+    border: 1px solid #2f2f2f;
+    border-radius: 0.12em !important;
+    background-color: #111111f2;
+    color: #e5e5e5;
+    font-size: xx-small;
+    cursor: pointer;
+}
+
+.custom-alert {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+ 
+#gen-alert {
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 99;
+}
+
+.gen-alert-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: white !important;
+    border: 1px solid #ccc;
+    border-radius: 0.12em;
+
+}
+  
+#gen-alert-msg {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+#gen-alert-button {
+    font-size: medium !important;
+    cursor: pointer;
 }
