--- a/src/CardCarouselSecond.css
+++ b/src/CardCarouselSecond.css
@@ -38,14 +38,13 @@ body {
     left: 12.5%;
     cursor: pointer;
     z-index: -1;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
 }
 
-.cardS h2,
-.cardS p {
-    line-height: 1.5;
-}
-
-.cardS.next p {
+.cardS.next .left,
+.cardS.next .right{
     visibility: hidden;
 }
 
@@ -67,4 +66,28 @@ body {
     transition-delay: 0.2s;
     opacity: 1;
     height: 125%;
+}
+
+.cardS .left{
+    flex-grow: 1;
+}
+
+.cardS .left h2{
+    font-size: 3em;
+    margin: 0;
+}
+
+.cardS .left p{
+    text-align: justify;
+    font-size: 1.5em;
+    font-style: italic;
+    padding: 0 1em;
+}
+
+.cardS .right{
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 25em;
+    border: 0.1em solid #cacaca;
+    border-radius: 1em;
 }
